# star-dominion-prototype

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
game/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  runtime.py
game/core/: __init__.py  app.py  scene.py
game/scenes/: __init__.py  star_map.py
tests/: test_app.py  test_bootstrap.py  test_cli.py  test_config.py  test_runtime.py  test_star_map.py
